<resources>

    <string name="app_name">South Mp3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="telugu_txt">Telugu Songs</string>
    <string name="search_txt">Search for a song</string>
    <string name="rate_txt">Rate our app</string>
    <string name="share_txt">Share our app</string>
    <string name="contact_txt">Contact us</string>
    
    <string name="app_id">505414579596954</string>

    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Search</item>
        <item>Share our App</item>
        <item>Rate Us</item>
        <item>Contact Us</item>
    </string-array>

    <string name="drawer_open"></string>
    <string name="drawer_close"></string>
    <string name="search_hint">Search</string>
    <string name="search_for_hint">Search for</string>
    <string name="menu">Menu</string>
    <string name="latest_releases_txt">Latest Releases</string>
    <string name="a_z_txt">A - Z List</string>
    <string name="top_list">Top List</string>
    <string name="song">Song</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="mixes_txt">Mixes</string>
    <string name="like_fb">Like Us On Facebook</string>

</resources>