<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/search_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:hint="@string/search_for_hint" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp" >

            <RadioButton
                android:id="@+id/song_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song" />

            <RadioButton
                android:id="@+id/album_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album" />

            <RadioButton
                android:id="@+id/artist_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist" />
        </RadioGroup>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/search_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/search_hint"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:id="@+id/ads_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/search_btn"
            android:background="@android:color/holo_blue_light" >
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>