<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/telugu_songs"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/light_blue_shadow"
            android:clickable="true"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/latest_releases_txt"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/search_song"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/indigo_shadow"
            android:clickable="true"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/a_z_txt"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/share_app"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/brown_shadow"
            android:clickable="true"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/top_list"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/rate_app"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/green_shdow"
            android:clickable="true"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/mixes_txt"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/contact_us"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/pink_shadow"
            android:clickable="true"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/contact_txt"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/dummy"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/purple_shadow"
            android:clickable="true"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/contact_txt"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1" >

        <com.facebook.widget.LikeView
            android:id="@+id/like_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </com.facebook.widget.LikeView>
    </LinearLayout>

</LinearLayout>